@@ -51,6 +51,7 @@
 	* Luckstones dramatically slow luck timeout instead of preventing it
 	  completely. Blessed luckstones slow the timeout of positive luck,
 	  cursed luckstones negative luck, and uncursed luckstones both.
+	* It is impossible to know both the speed and location of a quantum mechanic
 	
 
 	* Artifact changes:
